Fix header and about image sizing and spacing

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -32,7 +32,7 @@
   padding: 4rem 2rem;
 
   @media screen and (max-width: 450px) {
-    padding: 4rem 1rem 2rem;
+    padding: 3rem 1rem 2rem;
   }
 }
 
