--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -94,6 +94,7 @@
     width: 70%;
     height: 70%;
     color: var(--white-color);
+    cursor: pointer;
   }
 
   div {
