--- a/frontend/src/container/About/About.scss
+++ b/frontend/src/container/About/About.scss
@@ -1,7 +1,11 @@
-.app__about {
+#about {
   flex: 1;
   width: 100%;
-  flex-direction: column;
+  padding-top: 2rem;
+
+  @media screen and (max-width: 600px) {
+    padding-top: 1rem;
+  }
 }
 
 .app__profiles {
