--- a/frontend/src/container/Header/Header.scss
+++ b/frontend/src/container/Header/Header.scss
@@ -4,7 +4,11 @@
   background-size: cover;
   background-repeat: repeat;
   background-position: center;
-  padding-top: 3rem;
+  padding-top: 2rem;
+
+  @media screen and (max-width: 600px) {
+    padding-top: 1rem;
+  }
 
   .app__wrapper {
     padding: 0;
@@ -171,7 +175,7 @@
 
   img {
     margin-top: 1rem;
-    width: 100%;
+    width: 400px;
     object-fit: contain;
     z-index: 1;
   }
